3-echo-server/echo-server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-server
spec:
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
    - IPv6
    - IPv4
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: echo-server
