3-echo-server/private-route.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: tradingpulse-auth-middleware
spec:
  forwardAuth:
    address: http://ak-outpost-authentik-embedded-outpost:9000/outpost.goauthentik.io/auth/traefik
    trustForwardHeader: true
    maxResponseBodySize: 1048576 # MiB ?
    authResponseHeaders:
      - X-authentik-username
      - X-authentik-groups
      - X-authentik-entitlements
      - X-authentik-email
      - X-authentik-name
      - X-authentik-uid
      - X-authentik-jwt
      - X-authentik-meta-jwks
      - X-authentik-meta-outpost
      - X-authentik-meta-provider
      - X-authentik-meta-app
      - X-authentik-meta-version
---
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: echo-server-private
  namespace: default
  labels:
    app.kubernetes.io/name: "authentik"
    app.kubernetes.io/instance: "echo-server"
    app.kubernetes.io/component: "private"
    app.kubernetes.io/part-of: "authentik"
    app.kubernetes.io/version: "2026.2.1"
spec:
  entryPoints:
    - websecure
  tls:
    certResolver: le
    domains:
      - main: tradingpulse.ai
    secretName: authentik-tls
  routes:
    - match: Host(`tradingpulse.ai`) && PathPrefix(`/private`)
      kind: Rule
      services:
        - kind: Service
          name: echo-server
          port: 80
      middlewares:
        - name: cors-allow-all
        - name: tradingpulse-auth-middleware
